src/test/07-Imports/06-error-no-such.txt
06-error-no-such.ck:2:9: error: no such file: 'no-such-file.ck'
[2] @import "no-such-file.ck"
            ^
